--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
     </ol>
 
     <h2>Nutritional information</h2>
-    <p>serving size: <data value="100 g"></data></p>
+    <p>serving size: <data value="100">100 g</data></p>
 
     <dl>
       <dt>Energy:</dt>
-      <dd><data value="180 kJ"></data></dd>
+      <dd><data value="180">180 kJ</data></dd>
       <dt>Carbohydrates:</dt>
-      <dd><data value="9.96 g"></data></dd>
+      <dd>9.96 g</dd>
       <dt>Fat:</dt>
-      <dd><data value="o.18 g"></data></dd>
+      <dd>0.18 g</dd>
       <dt>Protein:</dt>
-      <dd><data value="1.68g"></data></dd>
+      <dd>1.68 g</dd>
     </dl>
 
   </main>
